<resources>
    <string name="app_name">Earthquake</string>
    <string name="mag_label">M&#160;</string>
    <string name="usa_label">United States,&#160;</string>
    <string name="night_mode_label">Night Mode</string>
    <string name="application_info_title">Application Info</string>
    <string name="developer_info_title">Developer Info</string>
    <string name="design_api_title">Design &amp; API</string>
    <string name="libraries_title">Libraries &amp; Resources</string>
    <string name="license_title">License</string>
    <string name="application_info_text">
        <![CDATA[
            <p>
            <b>Earthquake application</b>
            <br/>
            Version: %1$s
            <br/>
            This application is open source at <br/><a href="https://github.com/bkhezry/earthquake">https://github.com/bkhezry/earthquake</a></p>
        ]]>
    </string>
    <string name="developer_info_text" translatable="false">
        <![CDATA[
            <p>Behrouz Khezry <a href="https://twitter.com/bkhezry">@bkhezry</a></p>
        ]]>
    </string>
    <string name="design_api_text" translatable="false">
        <![CDATA[
            <p>
            <a href="https://earthquake.usgs.gov/">Earthquake USGS</a> Earthquake API
            <br/>
            <a href="https://www.flaticon.com/authors/freepik">Freepik</a> Icon Designer
            </p>
        ]]>
    </string>
    <string name="license_text" translatable="false">
        <![CDATA[
            <p>Copyright 2019 Behrouz Khezry</p>
            <p>Licensed under the Apache License, Version 2.0 (the "License");
            you may not use this file except in compliance with the License.
            You may obtain a copy of the License at</p>
            <p>&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://www.apache.org/licenses/LICENSE-2.0">http://www.apache.org/licenses/LICENSE-2.0</a></p>
            <p>Unless required by applicable law or agreed to in writing, software
            distributed under the License is distributed on an "AS IS" BASIS,
            WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
            See the License for the specific language governing permissions and
            limitations under the License.</p>
        ]]>
    </string>
    <string name="libraries_text" translatable="false">
        <![CDATA[
           <p>
            <a href="https://github.com/googlemaps/android-maps-utils">android-maps-utils</a> - Apache-2.0
            <br/>
            <a href="https://github.com/JakeWharton/butterknife">ButterKnife</a> - Apache-2.0
            <br/>
            <a href="https://github.com/square/retrofit">Retrofit</a> - Apache-2.0
            <br/>
            <a href="https://github.com/ReactiveX/RxAndroid">RxAndroid</a> - Apache-2.0
            <br/>
            <a href="https://github.com/mikepenz/FastAdapter">FastAdapter</a> - Apache-2.0
            <br/>
            <a href="https://github.com/rubensousa/GravitySnapHelper">GravitySnapHelper</a> - Apache-2.0
            <br/>
            <a href="https://github.com/google/material-design-icons">Material design icons</a> - Creative Common Attribution 4.0 International License
           </p>
        ]]>
</string>
    <string name="view_details_label">View Details</string>
    <string name="richter_scale_label">Richter Scale</string>
    <string name="location_label">Location</string>
    <string name="depth_label">Depth</string>
    <string name="time_label">Time</string>
    <string name="distance_label">Distance</string>
    <string name="filter_label">Filter</string>
    <string name="time_pass_label">Time Pass</string>
    <string name="past_hour_label">Past Hour</string>
    <string name="past_day_label">Past Day</string>
    <string name="past_7_days_label">Past 7 Days</string>
    <string name="past_30_days_label">Past 30 Days</string>
    <string name="all_earthquakes_label">All Earthquakes</string>
    <string name="m1_0_earthquakes_label">M1.0+ Earthquakes</string>
    <string name="m2_5_earthquakes_label">M2.5+ Earthquakes</string>
    <string name="m4_5_earthquakes_label">M4.5+ Earthquakes</string>
    <string name="no_internet_message">No internet access!</string>
    <string name="refresh_label">Refresh</string>
    <string name="bound_map">Bound map</string>
    <string name="marker">marker</string>
    <string name="more_info">More info</string>
</resources>
