<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical"
    app:behavior_hideable="true"
    app:cardBackgroundColor="?attr/colorPrimaryDark"
    app:cardCornerRadius="@dimen/spacing_medium"
    app:cardElevation="16dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/spacing_medium"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/time_pass_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chip_group_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_medium"
            app:checkedChip="@id/time_chip_0"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/time_chip_0"
                style="@style/CustomChipChoice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/past_hour_label"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                app:chipStrokeColor="@color/md_grey_300"
                app:chipStrokeWidth="1dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/time_chip_1"
                style="@style/CustomChipChoice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/past_day_label"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                app:chipStrokeColor="@color/md_grey_300"
                app:chipStrokeWidth="1dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/time_chip_2"
                style="@style/CustomChipChoice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/past_7_days_label"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                app:chipStrokeColor="@color/md_grey_300"
                app:chipStrokeWidth="1dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/time_chip_3"
                style="@style/CustomChipChoice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/past_30_days_label"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                app:chipStrokeColor="@color/md_grey_300"
                app:chipStrokeWidth="1dp" />
        </com.google.android.material.chip.ChipGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="@dimen/spacing_xlarge"
            android:layout_marginTop="@dimen/spacing_middle"
            android:layout_marginEnd="@dimen/spacing_xlarge"
            android:layout_marginBottom="@dimen/spacing_middle"
            android:background="@color/md_grey_300" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/richter_scale_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chip_group_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_medium"
            app:checkedChip="@id/scale_chip_0"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/scale_chip_0"
                style="@style/CustomChipChoice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all_earthquakes_label"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                app:chipStrokeColor="@color/md_grey_300"
                app:chipStrokeWidth="1dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/scale_chip_1"
                style="@style/CustomChipChoice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/m1_0_earthquakes_label"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                app:chipStrokeColor="@color/md_grey_300"
                app:chipStrokeWidth="1dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/scale_chip_2"
                style="@style/CustomChipChoice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/m2_5_earthquakes_label"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                app:chipStrokeColor="@color/md_grey_300"
                app:chipStrokeWidth="1dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/scale_chip_3"
                style="@style/CustomChipChoice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/m4_5_earthquakes_label"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                app:chipStrokeColor="@color/md_grey_300"
                app:chipStrokeWidth="1dp" />

        </com.google.android.material.chip.ChipGroup>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/filter_done_button"
            style="@style/TextAppearance.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/filter_label"
            android:textAllCaps="false"
            android:textColor="?android:textColorPrimary"
            app:cornerRadius="@dimen/spacing_medium"
            app:icon="@drawable/ic_tune_black_24dp"
            app:iconTint="?android:textColorPrimary" />
    </LinearLayout>

</com.google.android.material.card.MaterialCardView>